// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Mutliple MenuItem 1`] = `
.c1 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c0:hover:after {
  color: #d0c8c8;
}

.c0:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c0:hover:after {
  color: #d0c8c8;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  title=""
>
  <span
    className="c1"
  >
    <a>
      hello
    </a>
  </span>
</li>
`;

exports[`Item Mutliple MenuItem checked 1`] = `
.c1 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  font-weight: 400;
  color: #4d63ff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c0:after {
  color: #4d63ff;
}

.c0:hover:after {
  color: #4d63ff;
}

.c0:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c0:after {
  color: #4d63ff;
}

.c0:hover:after {
  color: #4d63ff;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  title=""
>
  <span
    className="c1"
  >
    <a>
      hello
    </a>
  </span>
</li>
`;

exports[`Item Single MenuItem 1`] = `
.c1 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c0:hover:after {
  color: #d0c8c8;
}

.c0:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  title="hello"
>
  <span
    className="c1"
  >
    hello
  </span>
</li>
`;

exports[`Item Single MenuItem checked 1`] = `
.c1 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  font-weight: 400;
  color: #4d63ff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c0:after {
  color: #4d63ff;
}

.c0:hover:after {
  color: #4d63ff;
}

.c0:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  title=""
>
  <span
    className="c1"
  >
    <a>
      hello
    </a>
  </span>
</li>
`;

exports[`Item children: null 1`] = `
.c1 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c0:hover:after {
  color: #d0c8c8;
}

.c0:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  title=""
>
  <span
    className="c1"
  />
</li>
`;
